# cereal

./: .gitignore  CMakeLists.txt  car.capnp
demo/: CMakeLists.txt  demo.cc
include/: c++.capnp.c++  java.capnp.c++
messaging/: socketmaster.cc
visionipc/: ipc.cc  visionbuf_cl.cc  visionipc_server.cc  visionipc_server.h
